domain/src/com/example/domain/category/errors/CategoryNameLengthOverflowError.java
package com.example.domain.category.errors;

public final class CategoryNameLengthOverflowError extends CategoryNameError {
}
